 5-Dec-2019 V0.26 Add support for entity typed schema and update dependencies.
 6-Dec-2019 V0.27 Add match index cache recovery.1
11-Dec-2019 V0.28 Adding reference sequence loader and moving pipeline to py38.
15-Dec-2019 V0.29 Added methods to load UniProt features
17-Dec-2019 V0.30 Pre-filter GOIDs and add ExDbWorkflow module with simple wf entry points
20-Dec-2019 V0.31 Adjust package definition
23-Dec-2019 V0.32 Change protocol for supplementing accessions and EC annotations.
04-Jan-2020 V0.33 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth
09-Jan-2020 V0.34 Add additional cache test criteria for UniProt match cache.
10-Jan-2020 V0.35 Update dependencies for rcsb.utils.go and rcsb.utils.struct
23-Jan-2020 V0.36 Changes to support pre-beta-v1 schema reorganization with the addition of rcsb_polymer_entity_annotation
27-Jan-2020 V0.37 Add annotation extractor modules and adjustments for some missing features.
29-Jan-2020 V0.38 Update dependencies for GO and Drugbank fixes
30-Jan-2020 V0.39 Update dependencies structure domain utilities
 2-Feb-2020 V0.40 Add test fixtures to measure memory usage, streamline some extractions, suppress some diagnostic reporting
 4-Feb-2020 V0.41 Update dependencies to support split configuration
 6-Feb-2020 V0.42 Address issue with duplicated annotations from multiple reference sequences
 8-Feb-2020 V0.43 Adjust the default chunk size in the workflow interface (set the default to 100)
 8-Feb-2020 V0.44 Expose the reference sequence fetch chunk size in the workflow interface
11-Feb-2020 V0.45 Simplify workflow api and update dependencies
13-Feb-2020 V0.46 Added validation tests to troubleshoot UniProt core loading.  Update dependencies.
16-Feb-2020 V0.47 Add alternative cache strategy for reference sequences.
19-Feb-2020 V0.48 Add Pfam and InterPro Providers and associated annotation
20-Feb-2020 V0.49 Combine missing UniProt accessions if available with other reference sequence data.