@@ -39,3 +39,4 @@
 16-Feb-2020 V0.47 Add alternative cache strategy for reference sequences.
 19-Feb-2020 V0.48 Add Pfam and InterPro Providers and associated annotation
 20-Feb-2020 V0.49 Combine missing UniProt accessions if available with other reference sequence data.
+26-Feb-2020 V0.50 Standardize case for gene names.
